2003-03-13  Ray Tomlinson  <RTomlinson@bbn.com>

	* TestFullSnapshot.java:
	Test plugin creates full snapshots after publishAdding a lot of
	objects and then again after publishRemoving those objects. Used
	to test that the removed objects are not included in the the full
	persistence snapshot.

	* Persistable.java:
	Interface for potentially persistable objects. The isPersistable()
	method from the Publishable interface has been moved here and
	Publishable now extends this interface. It was illogical that the
	Publishable interface declared the isPersistable method.

	* PersistenceObject.java:
	Fix comment to accurately describe what this class is for.

	* PersistenceOutputStream.java: 
	* PersistenceInputStream.java: 
	* PersistenceAssociation.java:
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Add PersistenceIdentity field to keep track of which client owns
	the object.

	* PersistencePluginAdapter.java: 
	* FilePersistenceBase.java: 
	* PersistencePlugin.java: 
	Bug #2572 -- Persistence snapshots grow without bound
	Add cleanupArchives method.

	* DatabasePersistence.java: 
	Use Logger instead of LoggingService.
	Generalize so that MySQL can be used as well as Oracle.

	* BufferedFileSystem.java: 
	* BufferedFilePersistence.java:
	Use Logger instead of LoggingService.

	* DummyPersistence.java: 
	Bug #2572 -- Persistence snapshots grow without bound
	Add cleanupArchive method

	* BasePersistence.java:
	Bug #2572 -- Persistence snapshots grow without bound
	Add org.cougaar.core.persistence.archiveCount property specifying
	how many archive snapshots to keep. Defaults to Integer.MAX_VALUE.

	* PersistenceIdentity.java: 
	Bug #1848 -- Need persistence of component hierarchy for mobile agents
	Used to identify persistence clients to match up rehydration data
	with the proper client. Must be invariant between restarts.

	* PersistenceClient.java: 
	Bug #1848 -- Need persistence of component hierarchy for mobile agents